Fixed layout issues with combo, full width input text boxes and full size input text areas. If the issue comes up with ones that are not using submitform, then those needs to be fixed as well.

--- a/BasicBlazorLibrary/Components/NavigationMenus/NavigationBarContainer.razor.css
+++ b/BasicBlazorLibrary/Components/NavigationMenus/NavigationBarContainer.razor.css
@@ -21,3 +21,7 @@
 .inline {
     display: inline-block;
 }
+
+.barcontent{
+    margin-right: 10px;
+}
